# sponsor-emails

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: package.yml
gdoc/: __init__.py  auth.py  client.py  utils.py
gdoc/types/: __init__.py  color.py  styling.py  units.py
mailgun/: __init__.py  client.py  errors.py  types.py
sponsor_emails/: __init__.py  cli.py  config.py  constants.py  logger.py  sheets.py
sponsor_emails/sender/: __init__.py  errors.py  run.py
sponsor_emails/subcommands/: validate.py
sponsor_emails/tests/: __init__.py  docs.py  mailgun.py  result.py  senders.py  sheets.py  sponsors.py  template.py
