[tool.poetry]
name = "sponsor-emails"
version = "0.1.0"
description = "Automate sending sponsorship emails using Google Docs, Google Sheets, and MailGun"
authors = ["Alex Krantz <alex@krantz.dev>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
